src/api/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express
  labels:
    app: express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
        - name: express
          image: ryutaterada/k8s-express
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: express
  labels:
    app: express
    service: express
spec:
  type: ClusterIP
  selector:
    app: express
  ports:
    - port: 9500
      targetPort: 5000
      name: http-express
